fixes scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,15 @@
   scroll-behavior: smooth;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   background-color: #F7F7F7;
+  overflow-x: hidden;
 }
 
 .page-container {
@@ -60,6 +65,7 @@ nav {
   display: flex;
   justify-content: space-around;
   width: 30%;
+  position: fixed;
 }
 
 .nav-links li {
